# dot-MVP-Back

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py  observability.py
app/dependencies/: auth.py  embed.py
app/models/: tutor.py  user.py
app/routers/: auth.py  chat.py  tutors.py  users.py
app/schemas/: auth.py  chat.py  tutor.py  user.py
app/services/: agent.py  auth.py  knowledge.py  tutors.py  users.py
tests/: conftest.py  test_agent.py  test_auth.py  test_chat.py  test_observability.py  test_tutors.py  test_users.py
